<resources>
    <string name="app_name">Summoner Stats</string>
    <string name="locale">en_US</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_list_accounts">Select Account</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name= "str_accounts_manager">Accounts Managers</string>
    <string name="str_summoner_level">Level</string>
    <string name="str_add_account">Add Account</string>
    <string name="str_region">Region :</string>
    <string name="str_summoner_field">Summoner :</string>
    <string name="str_date">Revision Date</string>
    <string name="str_selected">(*selected*)</string>
    <string name="str_is_summoner_selected">You can not delete the Selected account.</string>
    <string name="SM_001">The Summoner does not exits.</string>
    <string name="err_account_needed">You must enter an account.</string>
    <string name="err_updating_account">Error Updating.</string>
    <string name="str_summoner_updated">Account updated.</string>
    <string name="str_summoner_deleted">Account deleted.</string>

    <string name="str_history_title">Games History</string>
    <string name="str_unranked">Unranked</string>
    <string name="str_bronze">Bronze</string>
    <string name="str_silver">Silver</string>
    <string name="str_gold">Gold</string>
    <string name="str_platinum">Platinum</string>
    <string name="str_diamond">Diamond</string>
    <string name="str_master">Master</string>
    <string name="str_challenger">Challenger</string>
    <string name="str_wins">Wins</string>
    <string name="str_losses">Defeat</string>
    <string name="str_league_points">League Points</string>
    <string name="str_my_league">My League</string>
    <string name="str_history">History</string>
    <string name="str_current_game">Current Game</string>
    <string name="str_kills">Kills</string>
    <string name="str_deaths">Deaths</string>
    <string name="str_assists">Assists</string>
    <string name="str_defeated">Defeated</string>
    <string name="str_win">Win</string>
    <string name="str_map8">The Crystal Scar</string>
    <string name="str_map10">The Twisted Treeline</string>
    <string name="str_map11">Summoner\'s Rift</string>
    <string name="str_map12">Howling Abyss</string>
    <string name="str_map14">Butcher\'s Bridge</string>
    <string name="str_mapUnknow">Map Unknow</string>
    <string name="str_blue_team">Blue Team</string>
    <string name="str_red_team">Red Team</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
