<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mn_league"
            android:icon="@drawable/provisional"
            android:title="@string/str_my_league"/>
        <item
            android:id="@+id/mn_current_game"
            android:icon="@drawable/img_current"
            android:title="@string/str_current_game"
            />
        <item
            android:id="@+id/mn_history"
            android:icon="@drawable/ic_action_name"
            android:title="@string/str_history"
            />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
