<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <TextView
                android:id="@+id/txtQueueType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ranked solo duo"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="fill_vertical"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtQueueType">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txtLeagueUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="dscfgos"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/imgTierRank"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_below="@+id/txtLeagueUser"
                        android:src="@drawable/provisional"/>

                    <TextView
                        android:id="@+id/txtTierRank"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Bronze IV"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/str_wins"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/str_losses"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/str_league_points"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtLeagueWins"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="textEnd"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtLeagueLosses"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="textEnd"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtLeaguePoints"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="textEnd"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ratio"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/txtWinRatio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="50%"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="36sp"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>