<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <LinearLayout
            android:id="@+id/pnlRecentCardBorder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_win"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <LinearLayout
                android:id="@+id/pnlRecentCardHeader"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:background="@color/color_win"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:text="@string/str_defeated"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.527"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/txtMapType"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Defeated"/>

            <TextView
                android:id="@+id/txtMapType"
                android:layout_width="131dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:text="Grieta del Invocador (11-12-1979)"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="fill_vertical"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtResult">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txtChampionName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tryndamere"
                        android:textColor="@color/top_header"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/imgChampion"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_below="@+id/txtChampionName"
                        android:src="@drawable/provisional"
                        app:srcCompat="@drawable/tryndamere"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgSpell1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="1dp"
                            app:srcCompat="@drawable/summonerflash"/>

                        <ImageView
                            android:id="@+id/imgSpell2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="1dp"
                            app:srcCompat="@drawable/summonerteleport"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/str_kills"
                            android:textColor="@color/top_header"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/str_deaths"
                            android:textColor="@color/top_header"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/str_assists"
                            android:textColor="@color/top_header"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/txtKills"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtDeaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtAssistes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="textEnd"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:baselineAligned="false"
                            android:orientation="horizontal"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/textView4"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="Build"
                                            android:textColor="@color/top_header"
                                            android:textSize="18sp"
                                            android:textStyle="bold"/>

                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:id="@+id/imgItem0"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_margin="1dp"
                                            app:srcCompat="@drawable/i3139"/>

                                        <ImageView
                                            android:id="@+id/imgItem1"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_margin="1dp"
                                            app:srcCompat="@drawable/i3006"/>

                                        <ImageView
                                            android:id="@+id/imgItem2"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_margin="1dp"
                                            app:srcCompat="@drawable/i3031"/>
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:id="@+id/imgItem3"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_margin="1dp"
                                            app:srcCompat="@drawable/i3153"/>

                                        <ImageView
                                            android:id="@+id/imgItem4"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_margin="1dp"
                                            app:srcCompat="@drawable/i3072"/>

                                        <ImageView
                                            android:id="@+id/imgItem5"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_margin="1dp"
                                            app:srcCompat="@drawable/i3087"/>

                                        <ImageView
                                            android:id="@+id/imgItem6"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_margin="1dp"
                                            android:layout_weight="1"
                                            android:paddingLeft="5dp"
                                            app:srcCompat="@drawable/i3340"/>

                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>